--- a/programs/riddle-rush/Cargo.toml
+++ b/programs/riddle-rush/Cargo.toml
@@ -19,4 +19,5 @@ idl-build = ["anchor-lang/idl-build"]
 
 [dependencies]
 anchor-lang = "0.30.1"
+tiny-keccak = { version = "2.0.2", default-features = false, features = ["keccak"] }
 
