--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,8 @@
     "@coral-xyz/anchor": "0.30.1",
     "buffer": "^6.0.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
