--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,13 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "0.30.1",
+    "@project-serum/anchor": "^0.26.0",
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-react-ui": "^0.9.34",
+    "@solana/wallet-adapter-wallets": "^0.19.25",
+    "@solana/web3.js": "^1.98.2",
+    "bn.js": "^5.2.2",
     "buffer": "^6.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
