--- a/programs/riddle-rush/Cargo.toml
+++ b/programs/riddle-rush/Cargo.toml
@@ -9,15 +9,14 @@ crate-type = ["cdylib", "lib"]
 name = "riddle_rush"
 
 [features]
-default = []
-cpi = ["no-entrypoint"]
 no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
+cpi = ["no-entrypoint"]
+default = []
 idl-build = ["anchor-lang/idl-build"]
 
-
 [dependencies]
-anchor-lang = "0.30.1"
-tiny-keccak = { version = "2.0.2", default-features = false, features = ["keccak"] }
+anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
+tiny-keccak = { version = "2.0.2", features = ["sha3"] }
 
