--- a/Anchor.toml
+++ b/Anchor.toml
@@ -6,10 +6,10 @@ resolution = true
 skip-lint = false
 
 [programs.localnet]
-riddle_rush = "Arbq6eViLrrx51rnhrdX8K6BAWuSujS6aubnW9edAYhp"
+riddle_rush = "3bKvaAkVaejaBLzpo6qzRMLUXbKpUUTm6G7LagPFNWEJ"
 
 [programs.devnet]
-riddle_rush = "Arbq6eViLrrx51rnhrdX8K6BAWuSujS6aubnW9edAYhp"
+riddle_rush = "3bKvaAkVaejaBLzpo6qzRMLUXbKpUUTm6G7LagPFNWEJ"
 
 [registry]
 url = "https://api.apr.dev"
@@ -20,3 +20,4 @@ wallet = "~/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+initialize = "yarn run ts-node scripts/initialize.ts"
