--- a/app/package.json
+++ b/app/package.json
@@ -10,8 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "0.30.1",
-    "@project-serum/anchor": "^0.26.0",
+    "@coral-xyz/anchor": "^0.31.1",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.34",
@@ -24,6 +23,7 @@
     "react-router-dom": "^7.5.1"
   },
   "devDependencies": {
+    "@coral-xyz/anchor-cli": "^0.31.2",
     "@eslint/js": "^9.22.0",
     "@types/bn.js": "^5.1.5",
     "@types/react": "^19.0.10",
