--- a/programs/riddle-rush/Cargo.toml
+++ b/programs/riddle-rush/Cargo.toml
@@ -18,5 +18,5 @@ idl-build = ["anchor-lang/idl-build"]
 
 [dependencies]
 anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
-tiny-keccak = { version = "2.0.2", features = ["sha3"] }
+tiny-keccak = { version = "2.0.2", features = ["keccak"] }
 
