--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "bn.js": "^5.2.2",
     "buffer": "^6.0.3",
     "ethereum-cryptography": "^3.2.0",
+    "js-sha3": "^0.9.3",
     "keccak": "^3.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
